devnet/manifests/rpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devnet-rpc-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/bootnodes/[0-9]?/(.*) /$1 break;
      rewrite (?i)/bootnodes/[0-9]?$ / break;
      rewrite (?i)/validators/[0-9]?/(.*) /$1 break;
      rewrite (?i)/validators/[0-9]?$ / break;
spec:
  ingressClassName: devnet-nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: devnet-bootnode-1
            port:
              number: 8545
      - pathType: Prefix
        path: /bootnodes/1
        backend:
          service:
            name: devnet-bootnode-1
            port:
              number: 8545
      - pathType: Prefix
        path: /validators/1
        backend:
          service:
            name: devnet-validator-1
            port:
              number: 8545
      - pathType: Prefix
        path: /validators/2
        backend:
          service:
            name: devnet-validator-2
            port:
              number: 8545
      - pathType: Prefix
        path: /validators/3
        backend:
          service:
            name: devnet-validator-3
            port:
              number: 8545
      - pathType: Prefix
        path: /validators/4
        backend:
          service:
            name: devnet-validator-4
            port:
              number: 8545
