devnet/manifests/sirato-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devnet-sirato-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: devnet-sirato-nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: devnet-sirato-proxy
            port:
              number: 80
